# shelving

./: .gitignore  Cargo.toml  README.md
migrations/2022-05-28-104537_create_track_table/: down.sql  up.sql
migrations/2022-05-28-104538_create_track_play_table/: down.sql  up.sql
src/: app.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  spotify_api.rs
tests/: common.rs  integration_test.rs
