# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "shelving"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.11.3", features = ["env-file"] }
# used in spotify examples https://github.com/ramsayleung/rspotify/blob/master/Cargo.toml
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }