# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "shelving"
version = "0.2.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
# used in spotify examples https://github.com/ramsayleung/rspotify/blob/master/Cargo.toml
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"